--- a/src/index.css
+++ b/src/index.css
@@ -39,6 +39,10 @@ code {
   --content-background: rgb(42 42 42);
   --handler-background: rgb(30 31 33);
   --label-hover: rgba(245, 245, 245, 0.096);
+  --dropdown-color: rgb(50 51 53);
+  --dropdown-hover: rgb(62 63 65);
+  --dropdown-outline: #03a9f4;
+
 
 }
 
@@ -66,6 +70,9 @@ code {
   --color: black;
   --content-background: white;
   --handler-background: rgb(230 230 230);
+  --dropdown-color: white;
+  --dropdown-outline: #03a9f4;
+  --dropdown-hover: rgb(231, 231, 231);
 }
 
 
