--- a/src/components/AdvanceSelect/style.css
+++ b/src/components/AdvanceSelect/style.css
@@ -1,26 +1,32 @@
 .advance-select__search {
-    width: 100%;
+    min-width: 20%;
     height: 100%;
     border: none;
     outline: none;
     font-size: 14px;
     background-color: var(--background);
-    color: var(--color)
-
+    color: var(--color);
+    flex: 1;
 }
 input {
     padding: 0;
 }
 
 ul {
-    box-shadow: 0px 3px 12px 0px rgba(0,0,0,0.5);
-
+    box-shadow: 0px 10px 16px 0px rgba(0,0,0,0.2);
+    width: 100%;
+    overflow: hidden;
 }
 
 .advance-select__container {
-    padding: 20px 0;
-    width: 500px;
+    margin: 20px 0;
+    width: 100%;
     height: auto;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    width: 500px;
+
 }
 
 .advance-select__option {
@@ -34,6 +40,7 @@ ul {
     display: flex;
     align-items: center;
     background-color: var(--dropdown-color);
+    flex-direction: row;
 }
 
 .advance-select__option > li:hover {
@@ -46,12 +53,16 @@ ul {
 
 .advance-select__wrapper {
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     border: 1px solid rgb(211, 211, 211);
-    padding: 0 12px;
-    height: 30px;
     border-radius: 5px;
+    padding:  4px;
+    height: auto;
+    position: relative;
+    background-color: var(--background);
+    min-height: 24px;
+    flex-wrap: wrap;
 }
 
 .advance-select__wrapper:focus-within { 
@@ -64,26 +75,21 @@ ul {
     align-items: center;
     line-height: 100%;
     height: 100%;
+    flex-wrap: wrap;
+    flex-direction: row;
 }
 
 .value-option {
     background-color: var(--dropdown-outline);
     height: 70%;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 0 12px;
+    margin: 2px 0;
     margin-right: 10px;
     font-size: 14px;
     border-radius: 3px;
     color: white;
-    width: 70px;
-
-}
-
-.value-option > div {
-    flex: 1;
-
+    display: flex;
+    max-width: 100%;
+    padding: 2px 8px;
 }
 
 .value-option > i {
@@ -94,6 +100,40 @@ ul {
     font-size: 12px;
 }
 
+.value-option__icon {
+    display: flex;
+    align-items: center;
+}
+
 .current-option {
-    background-color: var(--dropdown-hover) !important;
+    background-color: var(--dropdown-choose) !important;
+}
+
+.disabled {
+    pointer-events: none;
+    opacity: 0.5;
+}
+
+.disabled::before {
+    content: '';
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.24);
+    position: absolute;
+    top: 0;
+    left: 0;
+    border-radius: 4px;
+}
+
+
+.checked {
+    width: 30px;
+}
+
+.input-bar {
+    display: flex;
+    justify-content: space-between;
+    /* width: '100%'; */
+    padding: 4px;
+    flex: 1;
 }
