--- a/src/App.css
+++ b/src/App.css
@@ -49,7 +49,6 @@
 
 .app__btn { 
   display: flex;
-  /* height: auto; */
   flex-direction: row;
   align-items: flex-start;
 }
@@ -66,7 +65,7 @@
   border-radius: 4px;
   cursor: pointer;
   font-weight: 600;
-  width: 80px;
+  min-width: 80px;
 }
 
 label {
@@ -203,4 +202,27 @@ label {
     100% {
         transform: scale(1);
     }
+}
+
+select {
+  outline: none;
+  appearance: none;
+  border: none;
+  width: 40px;
+  cursor: pointer;
+}
+
+.language-option {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  padding-left: 20px;
+}
+
+.language-option > img {
+  width: 20px;
+  height: 20%;
+  margin-right: 10px;
+  border-radius: 100%;
+  overflow: hidden;
 }
