--- a/src/components/AdvanceSelect/style.css
+++ b/src/components/AdvanceSelect/style.css
@@ -44,7 +44,7 @@ ul {
 }
 
 .advance-select__option > li:hover {
-    background-color: var(--dropdown-hover);
+    background-color: var(--dropdown-choose);
 }
 
 .hidden {
@@ -55,17 +55,18 @@ ul {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    border: 1px solid rgb(211, 211, 211);
-    border-radius: 5px;
+
     padding:  4px;
     height: auto;
     position: relative;
     background-color: var(--background);
     min-height: 24px;
     flex-wrap: wrap;
+    flex: 1;
+    outline: none;
 }
 
-.advance-select__wrapper:focus-within { 
+.advance-select:focus-within { 
     border: 1px solid var(--dropdown-outline);
 
 }
@@ -74,7 +75,6 @@ ul {
     display: flex;
     align-items: center;
     line-height: 100%;
-    height: 100%;
     flex-wrap: wrap;
     flex-direction: row;
 }
@@ -106,7 +106,7 @@ ul {
 }
 
 .current-option {
-    background-color: var(--dropdown-choose) !important;
+    background-color: var(--dropdown-hover) !important;
 }
 
 .disabled {
@@ -133,7 +133,27 @@ ul {
 .input-bar {
     display: flex;
     justify-content: space-between;
-    /* width: '100%'; */
     padding: 4px;
     flex: 1;
+}
+
+.advance-select {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    border: 1px solid rgb(211, 211, 211);
+    border-radius: 5px;
+    padding: 0 4px;
+    align-items: center;
+    background-color: var(--background);
+}
+
+.advance-select__handler {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.advance-select__handler > i {
+    padding-right: 4px
 }
