--- a/src/components/AdvanceSelect/style.css
+++ b/src/components/AdvanceSelect/style.css
@@ -12,7 +12,7 @@ input {
     padding: 0;
 }
 
-ul {
+.advance-select__option {
     box-shadow: 0px 10px 16px 0px rgba(0,0,0,0.2);
     width: 100%;
     overflow: hidden;
@@ -25,7 +25,6 @@ ul {
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
-    width: 500px;
 
 }
 
@@ -64,6 +63,7 @@ ul {
     flex-wrap: wrap;
     flex: 1;
     outline: none;
+    border-radius: 8px;
 }
 
 .advance-select:focus-within { 
@@ -77,6 +77,7 @@ ul {
     line-height: 100%;
     flex-wrap: wrap;
     flex-direction: row;
+    color: var(--color);
 }
 
 .value-option {
@@ -143,7 +144,7 @@ ul {
     justify-content: space-between;
     border: 1px solid rgb(211, 211, 211);
     border-radius: 5px;
-    padding: 0 4px;
+    /* padding: 0 4px; */
     align-items: center;
     background-color: var(--background);
 }
