--- a/src/components/Modal/style.css
+++ b/src/components/Modal/style.css
@@ -54,3 +54,20 @@
     padding: 8px;
 }
 
+
+.modal-content {
+    width: 100%;
+    height: 100%;
+    /* background-color: #03a9f4; */
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+.modal-overall {
+    width: 100%;
+    height: 100vh;
+    /* background-color: #066fa0; */
+    background-color: rgba(110, 110, 110, 0.301);
+
+}
