--- a/src/components/UploadImage/style.css
+++ b/src/components/UploadImage/style.css
@@ -87,16 +87,17 @@ label {
 
 }
 
-.enlange-picture .modal-block__body {
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-end;
-    align-items: flex-start;
+.modal-block__body {
+    position: absolute;
+    width: 60%;
+    height: 60%;
+    box-shadow: 0px 0px 12px 0px rgba(0,0,0,0.5);
+    background-color: white;
+    border-radius: 10px;
+    top: 20%;
+    left: 20%;
+    border: 12px solid white;
+
 }
 .enlange-picture .modal-block__body > button {
     margin: 8px;
@@ -162,4 +163,8 @@ label {
     100% {
         transform: scale(1);
     }
+}
+
+.upload-img__container {
+    padding: 100px;
 }
