--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,6 @@
   overflow: hidden;
   /* height: 100vh; */
   /* width: 100vw; */
-  height: 100vh;
 }
 
 a {
@@ -65,7 +64,8 @@ a {
   align-items: center;
   justify-content: center;
   height: 30px;
-  margin: 20px;
+  margin-right: 20px;
+  margin-top: 12px;
   padding: 0 16px;
   outline: none;;
   border-radius: 4px;
