--- a/src/components/Layout/style.css
+++ b/src/components/Layout/style.css
@@ -4,10 +4,11 @@
     width: 100vw;
     /* height: 97.8vh; */
     height: 100%;
+    position: fixed;
 
 }
 .components-container {
-    width: 15%;
+    width: 300px;
     background-color: var(--left-modal-background);
     height: 100%;
     border-right: 1px solid var(--header-layout);
@@ -22,13 +23,14 @@
 }
 
 .components__header {
-    margin: 12px;
     height: 40px;
     /* background-color: aqua; */
     padding: 12px;
     color: var(--color);
     font-weight: 900;
     font-size: 24px;
+    display: flex;
+    align-items: center;
 
 }
 
@@ -40,8 +42,8 @@
 .list__header {
     font-weight: 900;
     text-transform: uppercase;
-    font-size: 11px;
-    color: #9999;
+    font-size: 12px;
+    color: var(--layout-span);
     letter-spacing: 4px;
 }
 
@@ -68,25 +70,34 @@
 .component__header {
     height: 50px;
     background-color: var(--header-layout);
-    /* margin: 12px; */
+    padding-right: 0 1100px;
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
-    /* width: 100%; */
+    width: 100%;
     /* position: relative; */
 }
 
 .component__header-icon {
     /* background-color: aqua; */
     color: var(--color);
-    font-weight: 900;
-    font-size: 24px;
+    display: flex;
+    align-items: center;
     padding-left: 20px;
 } 
 
+.component__header-icon > span {
+    font-weight: 900;
+    font-size: 24px;
+    padding-left: 20px;
+
+
+
+}
+
 .left-modal {
-    width: 20%;
+    width: 350px;
     display: flex;
     justify-content: flex-end;
     position: absolute;
@@ -168,4 +179,20 @@
 
 .sub-content > a{
     padding-left: 20px;
+}
+.menu-toggle {
+    display: none;
+}
+
+@media screen and (max-width: 1199px) {
+    .components-container {
+        display: none;
+    }
+    .menu-toggle {
+        display: flex;
+    }
+}
+
+.children {
+    height: 100%;
 }
