--- a/src/components/UploadImage/style.css
+++ b/src/components/UploadImage/style.css
@@ -97,6 +97,9 @@ label {
     top: 20%;
     left: 20%;
     border: 12px solid white;
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
 
 }
 .enlange-picture .modal-block__body > button {
