--- a/src/pages/AdvanceSelectPage/style.css
+++ b/src/pages/AdvanceSelectPage/style.css
@@ -1,11 +1,18 @@
 .advance-select-page {
     padding: 20px 30px; 
-    display: flex;
-    justify-content: space-between;
+    color: var(--color);
+    height: max-content;
+    overflow-y: scroll;
 }
 
 .advance-actions {
     flex: 1;
     display: flex;
     padding: 12px 20px;
+}
+
+.advance-block {
+    display: flex;
+    flex-direction: column;
+    max-width: 700px;
 }
