--- a/src/pages/ModalPage/style.css
+++ b/src/pages/ModalPage/style.css
@@ -1,10 +1,18 @@
 .modal-window {
-    width: 20%;
-    position: absolute;
-    top: 35%;
-    left: 37%;
+    width: 300px;
     height: 200px;
+    /* margin-left: auto;
+    margin-right: auto;
+    margin-top: auto;
+    margin-bottom: auto; */
+    margin: auto;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    position: absolute;
     /* background-color: blue; */
+    animation: scale-up-center 0.5s ease;
 }
 
 .modal-window__container {
@@ -14,6 +22,8 @@
     height: 100%;
     box-shadow: 0px 0px 12px 0px rgba(0,0,0,0.5);
     border-radius: 12px;
+    width: 100%;
+
 
 }
 
@@ -71,8 +81,8 @@
     cursor: pointer;
 }
 
-#modal-page-root {
-    position: relative;
-    width: 100%;
+.modal-page {
+    padding: 30px;
+    color: var(--color);
     height: 100%;
 }
