--- a/src/pages/ToastPage/style.css
+++ b/src/pages/ToastPage/style.css
@@ -1,4 +1,13 @@
 .toast-page__container {
+    display: flex; 
+    padding: 30px;
+    flex-direction: column;
+    color: var(--color);
+}
+
+.toast-container {
     display: flex;
     flex-direction: row;
+    padding: 20px 0;
+    flex-wrap: wrap;
 }
