--- a/src/components/Modal/style.css
+++ b/src/components/Modal/style.css
@@ -17,7 +17,7 @@
     color: var(--color);
 }
 
-.modal-block__body-block {
+.k__body-block {
     flex: 1;
     display: flex;
     justify-content: center;
@@ -66,7 +66,7 @@
 .modal-overall {
     width: 100%;
     height: 100vh;
-    background-color: rgba(110, 110, 110, 0.301);
+    background-color: rgba(0, 0, 0, 0.501);
 
 }
 
@@ -74,20 +74,27 @@
     width: 300px;
     display: flex;
     justify-content: flex-end;
-    position: absolute;
+    /* position: absolute;
     top: 0;
-    left: 0;
-    height: 100vh;
+    left: 0; */
+    height: 100%;
+    overflow-y: auto;
+    background-color: var(--left-modal-background);
 }
 
 .right-modal__container {
-    background-color: var(--left-modal-background);
     width: 100%;
-    animation: slide-right 0.5s ease;
-    padding: 16px;
+    /* padding: 16px; */
     display: flex;
     flex-direction: column;
     align-items: center
+}
+
+.scale-down {
+    animation: scale-down-center 0.5s ease;
+}
+.scale-up {
+    animation: scale-up-center 0.5s ease;
 }
 
 @keyframes slide-right {
@@ -101,11 +108,60 @@
 
 @keyframes scale-up-center {
     0% {
-      -webkit-transform: scale(0.5);
-              transform: scale(0.5);
+        transform: scale(0.5);
     }
     100% {
-      -webkit-transform: scale(1);
-              transform: scale(1);
+        transform: scale(1);
+    }
+}
+
+@keyframes scale-down-center {
+    0% {
+        transform: scale(1);
+    }
+    100% {
+        transform: scale(0);
     }
   }
+
+@keyframes slide-modal-right {
+    0% {
+        transform: translateX(0);
+    }
+    100% {
+        transform: translateX(120%);
+    }
+}
+
+.body-container {
+    /* width: 350px; */
+    position: absolute;
+    top: 0;
+    height: 100%;
+    background-color: var(--left-modal-background);
+}
+
+.slide-modal-left {
+    animation: slide-left 0.25s ease;
+}
+
+.slide-modal-right {
+    animation: slide-modal-right 0.25s ease;
+}
+
+.slide-right-modal-left {
+    animation: slide-right-modal-left 0.25s ease;
+}
+
+.slide-right-modal-right {
+    animation: slide-right 0.25s ease;
+}
+
+@keyframes slide-right-modal-left {
+    0% {
+        transform: translateX(0);
+    }
+    100% {
+        transform: translateX(-100%);
+    }
+}
