--- a/src/components/UploadImage/style.css
+++ b/src/components/UploadImage/style.css
@@ -89,13 +89,13 @@ label {
 
 .modal-block__body {
     position: absolute;
-    width: 60%;
-    height: 60%;
+    width: 100%;
+    height: 100%;
     box-shadow: 0px 0px 12px 0px rgba(0,0,0,0.5);
     background-color: white;
     border-radius: 10px;
-    top: 20%;
-    left: 20%;
+    /* top: 20%;
+    left: 20%; */
     border: 12px solid white;
     background-position: center;
     background-size: cover;
